--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@ layout: default
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="175" height="175" style="border-radius:50%;" src="">
-				<h1>Hux</h1>
+				<h1>HZW</h1>
 				<p>A student major in SDN & Web</p>
 			</header>
 			<div class="main">
