--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "一生想做浪漫极客"
+description: "talk is cheap show me the girl."
 ---
 
 {% for post in paginator.posts %}
