--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "talk is cheap. show me the girl."
+description: "talk is cheap. show me the code."
 ---
 
 {% for post in paginator.posts %}
